--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -13,6 +13,6 @@ spring.h2.console.enabled=true
 
 springdoc.api-docs.path=/api-docs
 
-#spring.kafka.producer.bootstrap-servers: localhost:9092
-#spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
