--- a/Whislist-service.properties
+++ b/Whislist-service.properties
@@ -1,16 +1,25 @@
 server.port=8083
 server.servlet.context-path=/fav
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-spring.datasource.url=jdbc:h2:mem:whis
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+
+#spring.datasource.url=jdbc:h2:mem:whis
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.h2.console.enabled=true
 
 springdoc.api-docs.path=/api-docs
 
 spring.kafka.producer.bootstrap-servers: localhost:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+spring.datasource.url=jdbc:mysql://localhost:3306/book
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
