--- a/Whislist-service.properties
+++ b/Whislist-service.properties
@@ -12,9 +12,9 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 springdoc.api-docs.path=/api-docs
 
-spring.kafka.producer.bootstrap-servers: localhost:9092
-spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.bootstrap-servers: localhost:9092
+#spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/book
 spring.datasource.username=root
