--- a/Book-service.properties
+++ b/Book-service.properties
@@ -9,6 +9,6 @@ external.header.rapid.host.key=X-RapidAPI-Host
 external.header.rapid.host.value=book-finder1.p.rapidapi.com
 
 external.api=https://book-finder1.p.rapidapi.com/api/search
-spring.kafka.producer.bootstrap-servers: localhost:9092
-spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.bootstrap-servers: localhost:9092
+#spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
