--- a/Book-service.properties
+++ b/Book-service.properties
@@ -1,6 +1,7 @@
 server.port=5050
 server.servlet.context-path=/books
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+feign.client.config.Authorization.url=http://localhost:8000/auth
 springdoc.api-docs.path=/api-docs
 external.header.rapidapi.key=X-RapidAPI-Key
 external.header.rapidapi.value=0453ebbe58msh9e1a33b721be434p1175c3jsn90031e9855fe
