--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -17,7 +17,7 @@ springdoc.api-docs.path=/api-docs
 #spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
-spring.datasource.url=jdbc:mysql://localhost:3306/book
+spring.datasource.url=jdbc:mysql://aditi2116467.c3q4yy86qxei.us-east-1.rds.amazonaws.com:3306/book
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
