--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -17,9 +17,10 @@ springdoc.api-docs.path=/api-docs
 #spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
-spring.datasource.url=jdbc:mysql://aditi2116467.c3q4yy86qxei.us-east-1.rds.amazonaws.com:3306/book
+
+spring.datasource.url=jdbc:mysql://aditi2116467.c3q4yy86qxei.us-east-1.rds.amazonaws.com:3306/aditidb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
