--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -21,7 +21,7 @@ springdoc.api-docs.path=/api-docs
 spring.datasource.url=jdbc:mysql://aditi2116467.c3q4yy86qxei.us-east-1.rds.amazonaws.com:3306/aditidb
 spring.datasource.username=root
 spring.datasource.password=root1234
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
