--- a/Book-service.properties
+++ b/Book-service.properties
@@ -1,6 +1,6 @@
 server.port=5050
 server.servlet.context-path=/books
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
 feign.client.config.Authorization.url=http://localhost:8000/auth
 springdoc.api-docs.path=/api-docs
 external.header.rapidapi.key=X-RapidAPI-Key
