--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -1,6 +1,6 @@
 server.port=8082
 server.servlet.context-path=/users
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
 
 #h2 database
 #spring.datasource.url=jdbc:h2:mem:user
