--- a/Whislist-service.properties
+++ b/Whislist-service.properties
@@ -1,6 +1,6 @@
 server.port=8083
 server.servlet.context-path=/fav
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
 feign.client.config.Authorization.url=http://localhost:8000/auth
 #spring.datasource.url=jdbc:h2:mem:whis
 #spring.datasource.driverClassName=org.h2.Driver
