--- a/API-GATEWAY-SERVICE.yml
+++ b/API-GATEWAY-SERVICE.yml
@@ -39,6 +39,6 @@ eureka:
         register-with-eureka: true
         fetch-registry: true
         service-url:
-            defaultZone: http://localhost:8761/eureka/
+            defaultZone: http://34.201.101.226:8761/eureka/
     instance:
-        hostname: localhost
+        hostname: aditi_eurekaserver
