--- a/Authorization.properties
+++ b/Authorization.properties
@@ -2,3 +2,4 @@ server.port=8000
 server.servlet.context-path=/auth
 springdoc.api-docs.path=/api-docs
 jwt.secret=jwtsecretkey
+eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
