--- a/Whislist-service.properties
+++ b/Whislist-service.properties
@@ -1,7 +1,7 @@
 server.port=8083
 server.servlet.context-path=/fav
 eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
-feign.client.config.Authorization.url=http://localhost:8000/auth
+feign.client.config.Authorization.url=http://18.215.167.96:8000/auth
 #spring.datasource.url=jdbc:h2:mem:whis
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
