--- a/API-GATEWAY-SERVICE.yml
+++ b/API-GATEWAY-SERVICE.yml
@@ -15,19 +15,19 @@ spring:
                     allowedHeaders: "*"
             routes:
             - id: UserDetails-Microservice
-              uri: lb://35.93.50.210
+              uri: http://35.93.50.210
               predicates:
               - Path= /users/**
             - id: Book-service
-              uri: lb://35.87.49.136
+              uri: http://35.87.49.136
               predicates:
               - Path= /books/**
             - id: Whislist-service
-              uri: lb://18.236.102.202 
+              uri: http://18.236.102.202 
               predicates:
               - Path= /fav/**
             - id: Authorization
-              uri: lb://18.215.167.96
+              uri: http://18.215.167.96
               predicates:
               - Path= /auth/**
             
