--- a/Authorization.properties
+++ b/Authorization.properties
@@ -2,4 +2,8 @@ server.port=8000
 server.servlet.context-path=/auth
 springdoc.api-docs.path=/api-docs
 jwt.secret=jwtsecretkey
-eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://34.201.101.226:8761/eureka/
+eureka.instance.hostname=aditi_eurekaserver
+
