--- a/Book-service.properties
+++ b/Book-service.properties
@@ -1,6 +1,10 @@
 server.port=5050
 server.servlet.context-path=/books
-eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://34.201.101.226:8761/eureka/
+eureka.instance.hostname=aditi_eurekaserver
+
 feign.client.config.Authorization.url=http://18.215.167.96:8000/auth
 springdoc.api-docs.path=/api-docs
 external.header.rapidapi.key=X-RapidAPI-Key
