--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -1,6 +1,10 @@
 server.port=8082
 server.servlet.context-path=/users
-eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://34.201.101.226:8761/eureka/
+eureka.instance.hostname=aditi_eurekaserver
+
 
 #h2 database
 #spring.datasource.url=jdbc:h2:mem:user
