--- a/Whislist-service.properties
+++ b/Whislist-service.properties
@@ -1,6 +1,10 @@
 server.port=8083
 server.servlet.context-path=/fav
-eureka.client.service-url.default-zone=http://34.201.101.226:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://34.201.101.226:8761/eureka/
+eureka.instance.hostname=aditi_eurekaserver
+
 feign.client.config.Authorization.url=http://18.215.167.96:8000/auth
 #spring.datasource.url=jdbc:h2:mem:whis
 #spring.datasource.driverClassName=org.h2.Driver
