--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -2,8 +2,8 @@ server.port=8082
 server.servlet.context-path=/users
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://34.201.101.226:8761/eureka/
-eureka.instance.hostname=aditi_eurekaserver
+eureka.client.service-url.defaultZone=http://174.129.184.236:8761/eureka/
+eureka.instance.hostname=aditieureka
 
 
 #h2 database
