--- a/UserDetails-Microservice.properties
+++ b/UserDetails-Microservice.properties
@@ -22,7 +22,7 @@ springdoc.api-docs.path=/api-docs
 #spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 
-spring.datasource.url=jdbc:mysql://aditi2116467.c3q4yy86qxei.us-east-1.rds.amazonaws.com:3306/aditidb
+spring.datasource.url=jdbc:mysql://aditiinstance.c3q4yy86qxei.us-east-1.rds.amazonaws.com:3306/aditidb
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto=update
