--- a/Authorization.properties
+++ b/Authorization.properties
@@ -5,5 +5,5 @@ jwt.secret=jwtsecretkey
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://174.129.184.236:8761/eureka/
-eureka.instance.hostname=aditi_eurekaserver
+eureka.instance.hostname=aditieureka
 
