--- a/Book-service.properties
+++ b/Book-service.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/books
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://34.201.101.226:8761/eureka/
-eureka.instance.hostname=aditi_eurekaserver
+eureka.instance.hostname=aditieureka
 
 feign.client.config.Authorization.url=http://107.20.52.241:8000/auth
 springdoc.api-docs.path=/api-docs
