--- a/Whislist-service.properties
+++ b/Whislist-service.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/fav
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://174.129.184.236:8761/eureka/
-eureka.instance.hostname=aditi_eurekaserver
+eureka.instance.hostname=aditieureka
 
 feign.client.config.Authorization.url=http://107.20.52.241:8000/auth
 #spring.datasource.url=jdbc:h2:mem:whis
