--- a/API-GATEWAY-SERVICE.yml
+++ b/API-GATEWAY-SERVICE.yml
@@ -41,4 +41,4 @@ eureka:
         service-url:
             defaultZone: http://174.129.184.236:8761/eureka/
     instance:
-        hostname: aditi_eurekaserver
+        hostname: aditieureka
